comunicate between sibling using service with the help of observable & promise

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
+<div style="text-align:center; background-color: darkorange">
   <h1>
-    Welcome to {{ title }}!
+    Learn {{ title }}!
   </h1>
 </div>
 
