--- a/src/app/reactive-form/page/nested-forms-page/nested-forms-page.component.html
+++ b/src/app/reactive-form/page/nested-forms-page/nested-forms-page.component.html
@@ -6,6 +6,6 @@
 <div class="container">
     <form [formGroup]="nestedForm">
         <app-basic-info formControlName="basicInfo"></app-basic-info>
-        <button type="button" (click)="onSubmit()" [disabled]="nestedForm.invalid">Place Order</button>
+        <button type="button" (click)="onSubmit()" [disabled]="nestedForm.invalid">Submit</button>
     </form>
 </div>
