template syntax : : Interpolation , template expression , expression context.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
     Learn {{ title }}!
   </h1>
 </div>
-
+<section>
+  <span>Main menu : </span>
+  <app-menu [menu]="routes"></app-menu>
+</section>
 <router-outlet></router-outlet>
