access public property of directive into html template.

--- a/src/app/template-syntax/component/expressions/expressions.component.html
+++ b/src/app/template-syntax/component/expressions/expressions.component.html
@@ -5,4 +5,4 @@
 <!-- "The sum of 1 + 1 is not 4" -->
 <p>The sum of 1 + 1 is not {{1 + 1 + getVal()}}.</p>
 
-<!-- <p AccessPublicMember #accessPublicMember="AccessPublicMember">Access public member of directive i.e username: {{accessPublicMember.username}}</p> -->
+<p AccessPublicMember #accessPublicMember="AccessPublicMember">Access public member of directive i.e username: {{accessPublicMember.username}}</p>
