--- a/src/app/use-componet-as-directive/multiple-selector/multiple-selector.component.html
+++ b/src/app/use-componet-as-directive/multiple-selector/multiple-selector.component.html
@@ -1,3 +1,3 @@
 <p>
-    <b>Component as attribute directive works!</b>
+    we can use any <b>valid css selectors for load the Component</b>. This component is loaded by using one of the selectors list which are tag, class or attribute.
 </p>
