--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center; background-color: darkorange">
-  <h1>
+<!-- <div style="text-align:center; background-color: darkorange"> -->
+<!-- </div> -->
+<nav class="container-fluid">
+  <h1 class="heading">
     Learn {{ title }}!
   </h1>
-</div>
-<section>
   <span>Main menu : </span>
   <app-menu [menu]="routes"></app-menu>
-</section>
+</nav>
 <router-outlet></router-outlet>
