--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
+<footer class="footer">
     <b [routerLink]="'hero'" style="cursor: pointer;">secondary bootstraping component!</b>
-</p>
+</footer>
