@Output() event created by Rxjs Subject is supported. we can create Output event by creating observable type object.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
     Learn {{ title }}!
   </h1>
   <span>Main menu : </span>
-  <app-menu [menu]="routes"></app-menu>
+  <app-menu [menu]="routes" (menuFocus)="onMenuFocus($event)"></app-menu>
 </nav>
 <router-outlet></router-outlet>
